# Robotic-Systems-Integration

./: README.md  image_publisher.py  qr_scanner.py  yolo_onnx_detector.py
QR_Scan/: image_publisher.py  instructions.txt  qr_scanner.py  yolo_onnx_detector.py
robot_ws/: README.md  package.xml  setup.py
robot_ws/config/: nav2_params.yaml  params.yaml  qr_mapping.yaml  slam_params.yaml
robot_ws/launch/: nav2_slam.launch.py  nav2_static.launch.py  robot_launch.py
robot_ws/src/: camera_node.py  esp32_interface.py  lidar_node.py  task_node.py
robot_ws/src/utils/: qr_decoder.py  qr_logger_node.py
